--- a/www/views/index.ejs
+++ b/www/views/index.ejs
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Cabin: Thoroughly Learn React and Redux with this example app</title>
+    <title>React / Redux Tutorial: Build an example app with Stream</title>
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="canonical" href="http://cabin.getstream.io" />
-    <meta name="description" content="This example application created by getstream.io teaches you how to to build an Instagram style application with activity streams and newsfeeds.">
-    <meta name="keywords" content="react js course, react and redux, react router, redux reducer, react upload, react javascript, redux javascript, react tutorial, redux architecture, react stream, react webpack, redux infinite scroll">
+    <meta name="description" content="This full stack React & Redux tutorial created by getstream.io teaches you how to build an Instagram style example app with activity streams and newsfeeds.">
 
     <meta property="og:title" content="Cabin - A React/Redux Tutorial Series by GetStream.io">
     <meta property="og:site_name" content="Cabin - A React/Redux Tutorial Series by GetStream.io">
@@ -60,7 +59,7 @@ ga('send', 'pageview');
 
         <row class="header animated fadeInDown">
           <column cols="2" class="logo">
-            <img src="/img/Logo.svg" alt="Cabin Logo">
+            <img src="/img/Logo.svg" alt="Cabin: Learn React & Redux">
           </column>
 
           <column cols="10">
@@ -76,7 +75,7 @@ ga('send', 'pageview');
 
       <row class="content">
         <column cols="7">
-          <img src="/img/hero-react-redux.svg" width="194" height="71" class=" animated zoomIn" alt="React and Redux"/>
+          <img src="/img/hero-react-redux.svg" width="194" height="71" class=" animated zoomIn" alt="7 React and Redux Tutorials"/>
 
           <h6 class=" animated zoomIn">BROUGHT TO YOU BY <a href="//getstream.io" target="_blank" title="GetStream.io">GETSTREAM.IO</a></h6>
 
@@ -111,9 +110,9 @@ ga('send', 'pageview');
       <row centered>
         <column cols="10" class="card animated fadeIn">
           <span class="label text-centered">Maximizing Efficiency</span>
-          <h2>Built With These Great Services</h2>
+          <p class="h2">Built With These Great Services</p>
           <p>Cabin is built using React and Redux. Stream powers the feed technology, Algolia search, Mapbox the custom maps, Keen analytics and ImgIX the image resizing. These APIs are powerful and scalable and allow you to build a fully featured app.</p>
-          <img src="/img/partners-flare.png" alt="API Partners" />
+          <img src="/img/partners-flare.png" alt="API partners used in this full stack app tutorial" />
         </column>
       </row>
       <row centered>
@@ -124,7 +123,7 @@ ga('send', 'pageview');
 
     <section class="topics">
       <row centered>
-        <h1>Getting Started</h1>
+        <h2 class="h1">Getting Started</h2>
       </row>
       <row centered>
         <ul>
@@ -147,7 +146,7 @@ ga('send', 'pageview');
       <row>
         <column cols="4" offset="2" class="text-centered">
           <img src="/img/reactlogo.svg" width="40" height="36" alt="React logo" />
-          <h3>React</h3>
+          <h2>React</h2>
           <ul>
             <a href="https://getstream.io/blog/cabin-react-redux-example-app-react/" class="btn green" target="_blank" title="Cabin Tutorial - Step 2">Step 2 &rarr;</a>
             <li>History &amp; Philosophy of <a href="https://facebook.github.io/react/" target="_blank">React</a></li>
@@ -158,7 +157,7 @@ ga('send', 'pageview');
 
         <column cols="4" class="text-centered">
           <img src="/img/reduxlogo.svg" width="37" height="35" alt="Redux logo" />
-          <h3>Redux</h3>
+          <h2>Redux</h2>
           <ul>
             <a href="https://getstream.io/blog/cabin-react-redux-example-app-redux/" class="btn green" target="_blank" title="Cabin Tutorial - Step 3">Step 3 &rarr;</a>
             <li><a href="http://redux.js.org/" target="_blank">Redux</a> Overview</li>
@@ -180,10 +179,10 @@ ga('send', 'pageview');
       <row>
         <column cols="4" offset="2" class="text-centered">
           <img src="/img/streamlogo.svg" width="56" height="28" alt="Stream logo" />
-          <h3>Feeds</h3>
+          <h2>Feeds</h2>
           <ul>
             <a href="https://getstream.io/blog/cabin-react-redux-example-app-stream/" class="btn green" target="_blank" title="Cabin Tutorial - Step 4">Step 4 &rarr;</a>
-            <li>Feeds powered by <a href="//getstream.io" target="_blank">Getstream.io</a></li>
+            <li>Feeds powered by Getstream.io</li>
             <li>Stream Overview</li>
             <li>Adding Activities</li>
             <li>Enriching Data</li>
@@ -194,12 +193,12 @@ ga('send', 'pageview');
 
         <column cols="4" class="text-centered">
           <img src="/img/imgixlogo.svg" width="91" height="34" alt="Imgix logo" />
-          <h3>Image Processing</h3>
+          <h2>Image Processing</h2>
           <ul>
             <a href="https://getstream.io/blog/cabin-react-redux-example-app-imgix/" class="btn green" target="_blank" title="Cabin Tutorial - Step 5">Step 5 &rarr;</a>
-            <li>Image hosting by <a href="https://imgix.com" target="_blank">ImgIx.com</a></li>
+            <li>Image hosting by ImgIx.com</li>
             <li>Setup</li>
-            <li>Image Adjustments</li>
+            <li>Image Adjustments</li
             <li>Instagram-Like Filters</li>
           </ul>
         </column>
@@ -209,10 +208,10 @@ ga('send', 'pageview');
 
           <column cols="4" offset="2" class="text-centered">
             <img src="/img/keenlogo.svg" width="35" height="30" alt="Keen logo" />
-            <h3>Analytics</h3>
+            <h2>Analytics</h2>
             <ul>
               <a href="https://getstream.io/blog/cabin-react-redux-example-app-keen/" class="btn green" target="_blank" title="Cabin Tutorial - Step 6">Step 6 &rarr;</a>
-              <li>Analytics with <a href="https://keen.io/" target="_blank">Keen</a></li>
+              <li>Analytics with Keen</li>
               <li>State vs DOM Manipulation</li>
               <li>Redux Fundamentals</li>
               <li>Reducers &amp; Actions</li>
@@ -221,10 +220,10 @@ ga('send', 'pageview');
 
         <column cols="4" class="text-centered">
           <img src="/img/algolialogo.svg" width="33" height="37" alt="Algolia logo" />
-          <h3>Search</h3>
+          <h2>Search</h2>
           <ul>
             <a href="https://getstream.io/blog/cabin-react-redux-example-app-algolia/" class="btn green" target="_blank" title="Cabin Tutorial - Step 7">Step 7 &rarr;</a>
-            <li>Search powered by <a href="https://algolia.com" target="_blank">Algolia</a></li>
+            <li>Search powered by Algolia</li>
             <li>Overview of Algolia</li>
             <li>Implementing Server Side</li>
             <li>Implementing Client Side</li>
@@ -236,10 +235,10 @@ ga('send', 'pageview');
       <row>
         <column cols="4" offset="2" class="text-centered">
           <img src="/img/mapboxlogo.svg" width="86" height="24" alt="Mapbox logo" />
-          <h3>Maps</h3>
+          <h2>Maps</h2>
           <ul>
             <a href="https://getstream.io/blog/cabin-react-redux-example-app-mapbox/" class="btn green" target="_blank">Step 8 &rarr;</a>
-            <li>Custom maps with <a href="https://mapbox.com" target="_blank">Mapbox.com</a></li>
+            <li>Custom maps with Mapbox.com</li>
             <li>Client &amp; Server Side Setups</li>
             <li>Integration Tips</li>
             <li>Mapbox Product Breakdowns</li>
@@ -247,27 +246,27 @@ ga('send', 'pageview');
         </column>
         <column cols="4" class="text-centered">
           <img src="/img/digitaloceanlogo.svg" width="54" height="30" alt="DigitalOcean logo" />
-          <h3>Cloud Server</h3>
+          <h2>Cloud Server</h2>
           <ul>
             <a href="https://www.digitalocean.com/community/tutorials/how-to-deploy-a-node-js-app-using-terraform-on-ubuntu-14-04" class="btn green" target="_blank">Step 9 &rarr;</a>
-            <li>Hosting through <a href="https://www.digitalocean.com/" target="_blank" title="DigitalOcean">DigitalOcean</a></li>
+            <li>Hosting through DigitalOcean</li>
             <li>Automating Deployments</li>
-            <li>Process Management with <a href="http://pm2.keymetrics.io/" target="_blank" title="PM2">pm2</a></li>
-            <li><a href="https://www.terraform.io/" target="_blank" title="Terraform">Terraform</a> Configuration</li>
+            <li>Process Management with pm2</li>
+            <li>Terraform Configuration</li>
           </ul>
         </column>
       </row>
 
       <row centered>
         <column cols="12" class="text-centered">
-          <img src="/img/bonus.svg" width="129" height="98" class="bonus-img" alt="Stream Bonus logo"/>
+          <img src="/img/bonus.svg" width="129" height="98" class="bonus-img" alt="Bonus tips for React & Redux"/>
         </column>
       </row>
       <row centered>
 
      <column cols="12" class="text-centered">
-        <span class="text-centered bonus-title">React/Redux - Best Practices &amp; Gotchas</span>
-        </column>
+        <h3 class="text-centered bonus-title">React/Redux - Best Practices &amp; Gotchas</h3>
+      </column>
 
       </row>
 
